--- a/about.html
+++ b/about.html
@@ -141,7 +141,7 @@
 			        <h4>
 			          <time>Bachelors in Computer Application</time>
 			        </h4>
-			        <p><b><a href = "https://jecrcuniversity.edu.in/">JECRC University (2014 - 2017)</a></b></p>
+			        <p><b><a href = "https://jecrcuniversity.edu.in/" target="_blank">JECRC University (2014 - 2017)</a></b></p>
 			        <p><b>GPA:</b> 8.78 (On a scale of 10.00)</p><br>
 			        <div id = "detail1" style = "text-align: center;display: none">
 			        	<p>Studied Software Development, Android Development</p>
@@ -154,7 +154,7 @@
 			        <h4>
 			          <time>Masters in Computer Application</time>
 			        </h4>
-							<p><b><a href = "https://vit.ac.in/"> VIT University (2017 - 2019)</a></b></p>
+							<p><b><a href = "https://vit.ac.in/" target="_blank"> VIT University (2017 - 2019)</a></b></p>
 			        <p>November 2017 - March 2018</p><br>
 			        <div id = "detail2" style = "text-align: center;display: none;">
 			        	<p>Studied Software Development life cycle, IoT and Big Data</p>
@@ -169,8 +169,8 @@
 			        <h4>
 			          <time>Course Mentor</time>
 			        </h4>
-							<p><b><a href = "https://coursera.org"> Coursera </a></b></p>
-			        <p>November 2017 - March 2018</p><br>
+							<p><b><a href = "https://coursera.org" target="_blank"> Coursera </a></b></p>
+			        <p>May 2018 - Present</p><br>
 			        <div id = "detail3" style = "text-align: center;display: none;">
 			        	<p>Mentoring for Machine Learning: Regression (University of Washington)</p>
 			        </div>
@@ -184,7 +184,7 @@
 			        <h4>
 			          <time>Data Science Intern</time>
 			        </h4>
-			        <p><b><a href = "https://www.tealindia.in/">Terra Economics and Analytical Labs</a></b></p>
+			        <p><b><a href = "https://www.tealindia.in/" target="_blank">Terra Economics and Analytical Labs</a></b></p>
 			        <p>Jan 2019 - May 2019</p><br>
 			        <div id = "detail4" style = "text-align: center;display: none;">
 			        	<p> Web Scrapping, Data Preparation, Infrastructure Design</p>
@@ -197,7 +197,7 @@
 						 <h4>
 							 <time>Research Intern</time>
 						 </h4>
-						 <p><b><a href = "http://www.aimlrl.com/">Axis India ML Research Lab</a></b></p>
+						 <p><b><a href = "http://www.aimlrl.com/" target="_blank">Axis India ML Research Lab</a></b></p>
 						 <p>Jan 2019 - Jul 2019</p>
 
 						 <div id = "detail5" style = "text-align: left;display: none" >
@@ -212,7 +212,7 @@
 						 <h4>
 							 <time>Data Science Intern</time>
 						 </h4>
-						 <p><b><a href = "https://www.nabler.com/"> Nabler Web Solutions </a></b></p>
+						 <p><b><a href = "https://www.nabler.com/" target="_blank"> Nabler Web Solutions </a></b></p>
 						 <p>Aug 2019 - Oct 2019</p><br>
 						 <div id = "detail6" style = "text-align: center;display: none">
 						 	<p>Attribution Modelling, Graph Theory, NLP based Recommendation system for Digital Marketing</p>
@@ -225,13 +225,26 @@
 						 <h4>
 							 <time>Freelancer Data Scientist</time>
 						 </h4>
-						 <p>Nov 2019 - Jan 2020</p>
+						 <p>Nov 2019 - Present</p>
 						 <div id = "detail7" style = "text-align: center;display: none">
 						 	<p>AWS Deployment, Machine Learning modelling, NLP based problems</p>
 						 </div>
 					 </div>
 				 </li>
-
+				 <li>
+					 <div class="content" id = "tile8">
+					 	<script type="text/javascript"> hover_inout("tile8", "detail8");</script>
+						 <h4>
+							 <time>Data Scientist</time>
+						 </h4>
+						 <p><b><a href = "https://www.pichainlabs.com/" target="_blank"> Pichain Innovation Labs </a></b></p>
+						 <p>Jan 2020 - Present</p><br>
+						 <div id = "detail8" style = "text-align: center;display: none">
+						 	<p>Cloud Based ML Pipelines, Machine Learning, Deep Learning, Doker, NLP, Graph Theory, Set theory</p>
+						 </div>
+					 </div>
+				 </li>
+	
 			  </ul>
 			</section>
 			<hr id="FAQ">
@@ -298,8 +311,9 @@
 																<p>Let's be social. </p>
 																<div class="footer-social d-flex align-items-center">
 																		<!-- <a href="https://medium.com/@harrisonjansma"><i class="fa fa-medium"></i></a> -->
-																		<a href="http://www.linkedin.com/in/ritikjain51"><i class="fa fa-linkedin"></i></a>
-																		<a href="https://github.com/ritikjain51"><i class="fa fa-github"></i></a>
+																		<a href="http://www.linkedin.com/in/ritikjain51" target="_blank"><i class="fa fa-linkedin"></i></a>
+																		<a href="https://github.com/ritikjain51" target="_blank"><i class="fa fa-github"></i></a>
+																		<a href = "https://www.medium.com/@ritikjain51" target="_blank"><i class = "fa fa-medium"></i></a>
 
 																</div>
 														</div>
