--- a/index(3).html
+++ b/index(3).html
@@ -114,12 +114,12 @@ p.cursor::after {
 							     data-rotate='[ "Contemplative coder.", "analyst.", "Inspired by tough problems.", "pretty.", "fun!" ]'></span>
 							</h3>
 							
-							<div class="container py-5">
+							<!-- <div class="container py-5">
   <div class="output" id="output">
     <h1 class="cursor"></h1>
     <p></p>
   </div>
-</div>
+</div> -->
 							<a href="#portfolio" class="primary-btn text-uppercase mb-20">My Projects</a>
 						</div>
 						<div class="col-lg-6 col-md-6 col-xs-6 banner-right align-self-center">
